--- a/index.html
+++ b/index.html
@@ -8,26 +8,26 @@
 		<script type="text/javascript">backend = 'http://127.0.0.1'</script>
 
 		<!-- Bootstrap core CSS -->
-		<link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css?v=2015.5.31" />		<!-- Bootstrap theme -->
-		<link type="text/css" rel="stylesheet" href="/css/bootstrap-theme.min.css?v=2015.5.31" />
+		<link type="text/css" rel="stylesheet" href="./css/bootstrap.min.css?v=2015.5.31" />		<!-- Bootstrap theme -->
+		<link type="text/css" rel="stylesheet" href="./css/bootstrap-theme.min.css?v=2015.5.31" />
 		<!-- Custom styles for this template -->
-		<link type="text/css" rel="stylesheet" href="/css/uoj-theme.css?v=2022.01.16" />		
+		<link type="text/css" rel="stylesheet" href="./css/uoj-theme.css?v=2022.01.16" />		
 		<!-- jQuery (necessary for Bootstrap\'s JavaScript plugins) -->
-		<script type="text/javascript" src="/js/jquery.min.js"></script>		
+		<script type="text/javascript" src="./js/jquery.min.js"></script>		
 		<!-- jQuery autosize -->
-		<script type="text/javascript" src="/js/jquery.autosize.min.js"></script>		<script type="text/javascript">
+		<script type="text/javascript" src="./js/jquery.autosize.min.js"></script>		<script type="text/javascript">
 			$(document).ready(function() {
 				$('textarea').autosize();
 			});
 		</script>
 		
 		<!-- jQuery modal -->
-		<script type="text/javascript" src="/js/jquery.modal.js"></script>		
+		<script type="text/javascript" src="./js/jquery.modal.js"></script>		
 				
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
-		<script type="text/javascript" src="/js/bootstrap.min.js?v=2015.5.31"></script>		
+		<script type="text/javascript" src="./js/bootstrap.min.js?v=2015.5.31"></script>		
 		<!-- UOJ ico -->
-		<link rel="shortcut icon" href="/img/favicon.ico" />
+		<link rel="shortcut icon" href="./img/favicon.ico" />
 	</head>
 	<body role="document">
 		<div class="container theme-showcase" role="main">
@@ -38,7 +38,7 @@
 								</ul> -->
 				<h1 class="hidden-xs">
                     <a href="/">
-                        <img src="/img/logo_small.png" alt="Logo" class="img-rounded" style="width:39px; height:39px;" />
+                        <img src="./img/logo_small.png" alt="Logo" class="img-rounded" style="width:39px; height:39px;" />
                     </a> 
                     Moira
                 </h1>
@@ -53,12 +53,12 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/">Home</a>
+			<a class="navbar-brand" href="/moira/">Home</a>
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="/#FAQ">FAQ</a></li>
-				<li><a href="/#citation">Citation</a></li>
+				<li><a href="#FAQ">FAQ</a></li>
+				<li><a href="#citation">Citation</a></li>
 				<!-- <li><a href="/#contact">Contact</a></li> -->
 			</ul>
 		</div><!--/.nav-collapse -->
@@ -78,7 +78,7 @@
 								<li class="dropdown" style="list-style: none;">
 									<a href="#" class="dropdown-toggle btn btn-lg btn-success" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">View Examples &raquo; <span class="caret"></span></a>
 									<ul class="dropdown-menu">
-									  <li><a href="/result_4xtx.html">4xtx</a></li>
+									  <li><a href="./result_4xtx.html">4xtx</a></li>
 									  <li><a href="#">Another example todo</a></li>
 									  <li role="separator" class="divider"></li>
 									  <li class="dropdown-header">Something else here</li>
