--- a/result_4xtx.html
+++ b/result_4xtx.html
@@ -8,26 +8,26 @@
 		<script type="text/javascript">backend = 'http://127.0.0.1'</script>
 
 		<!-- Bootstrap core CSS -->
-		<link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css?v=2015.5.31" />		<!-- Bootstrap theme -->
-		<link type="text/css" rel="stylesheet" href="/css/bootstrap-theme.min.css?v=2015.5.31" />
+		<link type="text/css" rel="stylesheet" href="./css/bootstrap.min.css?v=2015.5.31" />		<!-- Bootstrap theme -->
+		<link type="text/css" rel="stylesheet" href="./css/bootstrap-theme.min.css?v=2015.5.31" />
 		<!-- Custom styles for this template -->
-		<link type="text/css" rel="stylesheet" href="/css/uoj-theme.css?v=2022.01.16" />		
+		<link type="text/css" rel="stylesheet" href="./css/uoj-theme.css?v=2022.01.16" />		
 		<!-- jQuery (necessary for Bootstrap\'s JavaScript plugins) -->
-		<script type="text/javascript" src="/js/jquery.min.js"></script>		
+		<script type="text/javascript" src="./js/jquery.min.js"></script>		
 		<!-- jQuery autosize -->
-		<script type="text/javascript" src="/js/jquery.autosize.min.js"></script>		<script type="text/javascript">
+		<script type="text/javascript" src="./js/jquery.autosize.min.js"></script>		<script type="text/javascript">
 			$(document).ready(function() {
 				$('textarea').autosize();
 			});
 		</script>
 		
 		<!-- jQuery modal -->
-		<script type="text/javascript" src="/js/jquery.modal.js"></script>		
+		<script type="text/javascript" src="./js/jquery.modal.js"></script>		
 				
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
-		<script type="text/javascript" src="/js/bootstrap.min.js?v=2015.5.31"></script>		
+		<script type="text/javascript" src="./js/bootstrap.min.js?v=2015.5.31"></script>		
 		<!-- UOJ ico -->
-		<link rel="shortcut icon" href="/img/favicon.ico" />
+		<link rel="shortcut icon" href="./img/favicon.ico" />
         <script src="/js/ngl.js"></script>
 	</head>
 	<body role="document">
@@ -39,7 +39,7 @@
 								</ul> -->
 				<h1 class="hidden-xs">
                     <a href="/">
-                        <img src="/img/logo_small.png" alt="Logo" class="img-rounded" style="width:39px; height:39px;" />
+                        <img src="./img/logo_small.png" alt="Logo" class="img-rounded" style="width:39px; height:39px;" />
                     </a> 
                     Moira
                 </h1>
@@ -54,12 +54,12 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/">Home</a>
+			<a class="navbar-brand" href="/moira/">Home</a>
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="/#FAQ">FAQ</a></li>
-				<li><a href="/#citation">Citation</a></li>
+				<li><a href="/moira/#FAQ">FAQ</a></li>
+				<li><a href="/moira/#citation">Citation</a></li>
 				<!-- <li><a href="/#contact">Contact</a></li> -->
 			</ul>
 		</div><!--/.nav-collapse -->
@@ -86,7 +86,7 @@
                                 <script>
                                     document.addEventListener("DOMContentLoaded", function () {
                                         NGL.DatasourceRegistry.add(
-                                            "data", new NGL.StaticDatasource( "4xtx/" )
+                                            "data", new NGL.StaticDatasource( "./4xtx/" )
                                         );
                                         var stage = new NGL.Stage("viewport");
                                         stage.setParameters( { backgroundColor: "white", hoverTimeout: -1 } );
@@ -107,7 +107,7 @@
                                     <script>
                                         document.addEventListener("DOMContentLoaded", function () {
                                             NGL.DatasourceRegistry.add(
-                                                "data", new NGL.StaticDatasource( "4xtx/" )
+                                                "data", new NGL.StaticDatasource( "./4xtx/" )
                                             );
                                             var stage = new NGL.Stage("viewport2");
                                             stage.setParameters( { backgroundColor: "white", hoverTimeout: -1 } );
@@ -189,7 +189,7 @@
                                 <h3 class="panel-title">Trajectory RMSD</h3>
                             </div>
                             <div class="panel-body">
-                                <p><img src="/4xtx/traj.png" width="100%" height="100%"></p>
+                                <p><img src="./4xtx/traj.png" width="100%" height="100%"></p>
                             </div>
                         </div>
                     </div>
@@ -199,7 +199,7 @@
                                 <h3 class="panel-title">Trajectory RMSD (12 periods)</h3>
                             </div>
                             <div class="panel-body">
-                                <p><img src="/4xtx/traj_12.png" width="100%" height="100%"></p>
+                                <p><img src="./4xtx/traj_12.png" width="100%" height="100%"></p>
                             </div>
                         </div>
                     </div>
@@ -211,7 +211,7 @@
                                 <h3 class="panel-title">Trajectory RMSF</h3>
                             </div>
                             <div class="panel-body">
-                                <p><img src="/4xtx/rmsf.png" width="100%" height="100%"></p>
+                                <p><img src="./4xtx/rmsf.png" width="100%" height="100%"></p>
                             </div>
                         </div>
                     </div>
@@ -221,7 +221,7 @@
                                 <h3 class="panel-title">Trajectory MMPBSA</h3>
                             </div>
                             <div class="panel-body">
-                                <p><img src="/4xtx/mmpbsa_traj.png" width="100%" height="100%"></p>
+                                <p><img src="./4xtx/mmpbsa_traj.png" width="100%" height="100%"></p>
                             </div>
                         </div>
                     </div>
@@ -233,7 +233,7 @@
                                 <h3 class="panel-title">MMPBSA</h3>
                             </div>
                             <div class="panel-body">
-                                <p><img src="/4xtx/mmpbsa.png" width="100%" height="100%"></p>
+                                <p><img src="./4xtx/mmpbsa.png" width="100%" height="100%"></p>
                                 <p> TODO 做一个开关切换 static/dynamic last5ns or 全程</p>
                                 <p> TODO 其他统计量也可以类似处理</p>
                             </div>
@@ -247,7 +247,7 @@
                                 <h3 class="panel-title">Dynamic Local Interaction (PLIP)</h3>
                             </div>
                             <div class="panel-body">
-                                <p><img src="/4xtx/plip.png" width="100%" height="100%"></p>
+                                <p><img src="./4xtx/plip.png" width="100%" height="100%"></p>
                             </div>
                         </div>
                     </div>
