--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <div class="jumbotron">
                             <h1>Huge name</h1>
                             <p>Some intro phrase here. maybe add some pictures.</p>
-                            <img class="img-thumbnail"src="/img/example.jpg">
+                            <img class="img-thumbnail"src="./img/example.jpg">
                             <br>
                             <br>
                             <p>
