--- a/result_4xtx.html
+++ b/result_4xtx.html
@@ -28,7 +28,7 @@
 		<script type="text/javascript" src="./js/bootstrap.min.js?v=2015.5.31"></script>		
 		<!-- UOJ ico -->
 		<link rel="shortcut icon" href="./img/favicon.ico" />
-        <script src="/js/ngl.js"></script>
+        <script src="./js/ngl.js"></script>
 	</head>
 	<body role="document">
 		<div class="container theme-showcase" role="main">
