--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<li role="presentation"><a href="https://uoj.ac/register">注册</a></li>
 								</ul> -->
 				<h1 class="hidden-xs">
-                    <a href="/">
+                    <a href="/moira/">
                         <img src="./img/logo_small.png" alt="Logo" class="img-rounded" style="width:39px; height:39px;" />
                     </a> 
                     Moira
