--- a/result_4xtx.html
+++ b/result_4xtx.html
@@ -252,6 +252,121 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-4">
+                        <div class="panel panel-info" id="citation">
+                                <div class="panel-heading">
+                                    <h3 class="panel-title">Dynamic Local Interaction (PLIP)</h3>
+                                </div>
+                                <div class="panel-body">
+                                    <script>
+                                        document.addEventListener("DOMContentLoaded", function () {
+                                            NGL.DatasourceRegistry.add(
+                                                "data", new NGL.StaticDatasource( "./4xtx/" )
+                                            );
+                                            var stage = new NGL.Stage("viewport-plip");
+                                            stage.setParameters( { backgroundColor: "white", hoverTimeout: -1 } );
+                                            // stage.loadFile("data://complex_vdw_bonded.pdb", {defaultRepresentation: true});
+                                            // stage.loadFile("data://md_1u19_trj.gro", {
+                                            // asTrajectory: true,
+                                            // sele: "50-100"
+                                            // }).then(function (o) {
+                                            // o.addTrajectory()
+                                            // o.addRepresentation("cartoon")
+                                            // o.addRepresentation("helixorient")
+                                            // o.addRepresentation("line", {
+                                            //     sele: "not hydrogen and sidechainAttached"
+                                            // })
+                                            // stage.autoView()
+                                            // })
+                                            stage.loadFile("data://DPDP.pdb").then(function (o) {
+                                            o.addRepresentation("licorice")
+                                            o.autoView()
+                                            o.addRepresentation('distance', {
+                                              atomPair: [[1, 13]],
+                                              color: 'skyblue',
+                                              labelUnit: 'angstrom',
+                                            })
+                                            // o.addRepresentation('distance', {
+                                            //   atomPair: [[23, 45]],
+                                            //   color: 'skyblue',
+                                            //   labelUnit: 'angstrom',
+                                            // })
+
+                                            o.addRepresentation('distance', {
+                                              atomPair: [[60, 100]],
+                                              color: 'skyblue',
+                                              labelUnit: 'angstrom',
+                                            })
+
+                                            NGL.autoLoad("data://DPDP.nc").then(function (frames) {
+                                                o.addTrajectory(frames)
+                                            })
+                                            })
+                                        });
+                                        
+                                    </script>
+                                    <p><div id="viewport-plip" style="width:100%; height:300px;"></div></p>
+                                    <p>TODO add label</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- <div class="panel panel-info" id="citation">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">Dynamic Local Interaction (PLIP)</h3>
+                            </div>
+                            <div class="panel-body">
+                                <p><img src="./4xtx/plip.png" width="100%" height="100%"></p>
+                            </div>
+                        </div> -->
+                        <div class="col-sm-12 col-md-8">
+                        <div class="panel panel-info" id="citation">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">Dynamic Local Interaction (PLIP)</h3>
+                            </div>
+                            <div class="panel-body">
+                                <p>Details</p>
+                                <p><table class="table table-striped">
+                                    <thead>
+                                      <tr>
+                                        <th>Type</th>
+                                        <th>Ratio</th>
+                                        <th>Timeline</th>
+                                      </tr>
+                                    </thead>
+                                    <tbody>
+                                      <tr>
+                                        <td>PLIP-1</td>
+                                        <td>23%</td>
+                                        <td><div class="progress progress-striped">
+                                            <div class="progress-bar progress-bar-success" role="progressbar"
+                                                 aria-valuenow="23" aria-valuemin="0" aria-valuemax="100"
+                                                 style="width: 23%;">
+                                                <span class="sr-only">23%</span>
+                                            </div>
+                                        </div>
+                                        </td>
+                                      </tr>
+                                      <tr>
+                                        <td>PLIP-2</td>
+                                        <td>60%</td>
+                                        <td><div class="progress progress-striped">
+                                            <div class="progress-bar progress-bar-info" role="progressbar"
+                                                 aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
+                                                 style="width: 60%;">
+                                                <span class="sr-only">60%</span>
+                                            </div>
+                                        </div>
+                                        </td>
+                                      </tr>
+                                    </tbody>
+                                  </table></p>
+                                            TODO discrete the bar
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                </div>
 			</div>
             
 						<div class="uoj-footer">
